test/extern/rename/renameInternField.good
renameInternField.chpl:3: error: only external types can have external fields
